--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,9 +1,11 @@
 
   <%= form_for(@item) do |f| %>
     <%= f.label :location %>
-    <%= f.text_field :location %>
-    <%= f.label :description %>
-    <%= f.text_field :description %>
+    <%= f.text_field :location %> <br> 
+    <%= f.label :description %> 
+    <%= f.text_field :description %> <br> 
+    <%= f.label "image" %>
+    <%= f.file_field :image %> <br><br> <br>
     
 <%= f.submit %>
     <% end %> 
